force-app/main/default/objects/OrderApi__Credit_Memo__c/fields/Fon_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fon_Actual_Amount__c</fullName>
    <description>TC-012647
Create a custom field ‘Actual Amount (Credit Memo)’ which must sum up the ‘Amount’ on all the Credit Memo Lines associated to the Batch record - CREATE a rollup field.</description>
    <label>Actual Amount</label>
    <summarizedField>OrderApi__Credit_Memo_Line__c.OrderApi__Amount__c</summarizedField>
    <summaryForeignKey>OrderApi__Credit_Memo_Line__c.OrderApi__Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>