force-app/main/default/objects/OrderApi__Credit_Memo__c/fields/Fon_Actual_Count__c.field-meta.xml
<CustomField>
    <fullName>Fon_Actual_Count__c</fullName>
    <description>TC-012647
Create a custom field ‘Actual Count (Credit Memo)’ which must sum up all the Credit Memo Lines associated to the Batch record -CREATE a rollup field.</description>
    <label>Actual Count</label>
    <summaryForeignKey>OrderApi__Credit_Memo_Line__c.OrderApi__Credit_Memo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>