force-app/main/default/objects/OrderApi__Credit_Memo__c/fields/Fon_Credit_Memo_Account__c.field-meta.xml
<CustomField>
    <fullName>Fon_Credit_Memo_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Credit Memos (Credit Memo Account)</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>