force-app/main/default/objects/OrderApi__Credit_Memo__c/fields/Fon_Receipt_Line__c.field-meta.xml
<CustomField>
    <fullName>Fon_Receipt_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Line</label>
    <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>