force-app/main/default/objects/OrderApi__Credit_Memo__c/fields/Fon_Required__c.field-meta.xml
<CustomField>
    <fullName>Fon_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>