force-app/main/default/objects/OrderApi__Credit_Memo__c/fields/Fon_Suggested_Usage__c.field-meta.xml
<CustomField>
    <fullName>Fon_Suggested_Usage__c</fullName>
    <label>Suggested Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Memberships</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>